force-app/main/default/objects/Job__c/fields/Exp_Years__c.field-meta.xml
<CustomField>
    <fullName>Exp_Years__c</fullName>
    <label>Exp Years</label>
    <length>255</length>
    <type>Text</type>
</CustomField>