force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Exp_Years__c</columns>
    <columns>Salary__c</columns>
    <columns>Skills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>